--- a/post_mortem_safe_back/package.json
+++ b/post_mortem_safe_back/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "npm run format && npm run lint && nest start",
     "start:dev": "npm run format && npm run lint && nest start --watch",
     "start:dev--force": "nest start --watch",
     "start:debug": "nest start --debug --watch",
