--- a/post_mortem_safe_front/package.json
+++ b/post_mortem_safe_front/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "graphql": "^16.6.0",
+    "jose": "^4.11.1",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
