--- a/post_mortem_safe_front/package.json
+++ b/post_mortem_safe_front/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "apollo-upload-client": "^17.0.0",
     "cookie": "^0.5.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
     "@graphql-codegen/client-preset": "^2.0.0",
+    "@types/apollo-upload-client": "^17.0.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
